[gd_scene load_steps=2 format=3 uid="uid://dtjhxwabfqgjv"]

[ext_resource type="Script" uid="uid://dj23qu86s8ydu" path="res://Scripts/UI/reward_card.gd" id="1_5bkd3"]

[node name="RewardCard" type="Control"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 3
anchors_preset = 0
offset_right = 50.0
offset_bottom = 50.0
script = ExtResource("1_5bkd3")

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="VBoxContainer" type="VBoxContainer" parent="Button"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SkillLabel" type="Label" parent="Button/VBoxContainer"]
layout_mode = 2
text = "Nome"

[node name="CastTimeLabel" type="Label" parent="Button/VBoxContainer"]
layout_mode = 2
text = "Cast Time"

[node name="DamageLabel" type="Label" parent="Button/VBoxContainer"]
layout_mode = 2
text = "Dano"
